# c

./: .gitignore  Makefile  README.md  is_even.c
.opencode/: package.json
TCP_IP_Socket_In_C/: CMakeLists.txt  build.sh  tags
TCP_IP_Socket_In_C/include/: TCPServerUtility.h
TCP_IP_Socket_In_C/src/: TCPEchoClient4.c  TCPEchoServer4.c  TCPServerUtility.c
ctest/: test  test.c
curl/: curl  curl.c
how_to_make_lib/: README.md  main  main.c  mymath.h
io/: main  my_printf  my_printf.c  printf
no-nonsense-c-programming/: README.md
no-nonsense-c-programming/src/02_transformer/: 02_transformer.c
no-nonsense-c-programming/src/03-files/: file-opener.c
passgen/: passgen.c
playgournd/: io.c
sdl/: Makefile
sdl/src/: main.c
simpleio/: main.c  simpleio.c  simpleio.h
socket/: .main.c.swp  Makefile  main.c
socket/.claude/: settings.local.json
src/: Makefile  linked_list.c  main.c  math.c  math.h  utils.c
src/examples/: .callback_function.c.swp  .malloc_ex.c.swp  Makefile  bit_fields.c  bit_shift.c  callback_function.c  endianness.c  function_ptr  function_ptr.c  hello.txt  main.c  malloc_ex.c  math.c  utils.c  void_ptr.c
src/how_to_make_lib/: mymath.c
src/io/: main.c  printf.c  restrict.c
src/lib/: utils.c
src/no-nonsense-c-programming/: Makefile  README.md
src/playgournd/: Makefile  assert.c  callback_fn.c  io.c
src/sdl/: .clangd  CMakeLists.txt  README.md  build.sh
src/sdl/src/: CMakeLists.txt
src/socket/: server.c  showip.c  tcp_client.c  tcp_server.c
src/syscall/: error.c  main.c
syscall/: a.txt  error  file  file.c  main
(+17 files in other folders)
